--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -2,15 +2,12 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding: 0;
 }
 
-.sair {
-  height: 32px;
-  font: normal normal 600 23px Poppins;
-  letter-spacing: 0.92px;
-  color: #926FF9;
-  opacity: 1;
-  margin: 60px
+.cadastre {
+  height: 64px;
+  margin: 30px 50px 0 0;
 }
 
 .title {
@@ -66,7 +63,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 80px
+  background: transparent linear-gradient(180deg, #01f0b03d 0%, #a540fd4b 100%) 0% 0% no-repeat padding-box;
 }
 
 .prepare {
@@ -79,6 +76,7 @@
   letter-spacing: 0px;
   color: #A440FC;
   opacity: 1;
+  margin-top: 80px;
 }
 
 .block {
@@ -187,4 +185,8 @@
   letter-spacing: 0px;
   color: #1E1C24;
   opacity: 1;
+}
+
+.comece {
+  margin: 80px;
 }
