--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+.imgLogo {
+  margin-bottom: 32px;
+}
+
 .cadastre {
   height: 64px;
   margin: 10% 15% 0 0;
@@ -37,7 +41,7 @@
   margin: 1% 0 2%;
 }
 
-.input {
+/*.input {
   width: 45%;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   box-shadow: 0px 0px 6px #00000061;
@@ -49,6 +53,12 @@
   border: none;
   background: transparent;
   color: #1e1c24d9;
+}*/
+form { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
 }
 
 .login {
